[project]
name = "PythonHttpRequestScript"
version = "0.0.1"
authors = [
  { name="Karthick Meenakshi Sundaram", email="affkar@gmail.com" },
]
description = "A Package that reads in a CSV specified by name as a param and makes as many API calls as there are records in a spreadsheet."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/affkar/PythonHttpRequestScript"
Issues = "https://github.com/affkar/PythonHttpRequestScript/issues"

